Left-align; adding Twitter link; fixing up quad-clearing

--- a/styles/main.css
+++ b/styles/main.css
@@ -19,8 +19,8 @@ header {
   position: absolute;
   top: 50%;
   left: 50%;
-  margin: -180px 0 0 -90px;
-  text-align: center;
+  margin: -116px 0 0 -173px;
+  text-align: left;
   padding: 20px;
   line-height: 64px;
 }
